feat: qdrant向量模型init